--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.14",
+    "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
