--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.14",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "gh-pages": "^6.3.0",
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
