--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "homepage": "https://hija-happy.github.io/hija-happy-portfolio/",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
